--- a/ko/search/index.html
+++ b/ko/search/index.html
@@ -164,7 +164,7 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://llama90.github.io/ko/archive" title="아카이브">
+                <a href="https://llama90.github.io/ko/archives" title="아카이브">
                     <span>아카이브</span>
                 </a>
             </li>
